--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,7 +9,7 @@
 		rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 		crossorigin="anonymous">
-
+	<link rel="stylesheet" type="text/css" href="{% static 'css/login.css' %}">
 </head>
 <body>
 	<div class="bg-body-danger m-3">
@@ -17,7 +18,7 @@
 	{% endfor %}
 	</div>
 	<div class="container mt-5 mx-auto w-50">
-		<h1 class="h2 mb-3">Login Page</h1>
+		<div class="login" id="header"><h1>Login Page</h1></div>
 		<form action="{% url 'login' %}" method="POST">
 		{% csrf_token %}
 			<div class="form-group lh-lg">
@@ -29,7 +30,7 @@
 				<input type="password" id="password" name="password" class="form-control" required>
 			</div>
 			<input type="submit" value="Login" class="btn btn-primary mt-3 text-center">
-		<p>Don't have an account ? <a href="{% url 'signup' %}">Register</a></p>
+		<div class="login" id="text"><p>Don't have an account ? <a href="{% url 'signup' %}">Register</a></p></div>
 		</form>
 	</div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
